[gd_scene load_steps=11 format=2]

[ext_resource path="res://mods-unpacked/RampagingHippy-Archipelago/ui/menus/run/ap_load_saved_run.gd" type="Script" id=1]
[ext_resource path="res://ui/menus/shop/shop_background.png" type="Texture" id=2]
[ext_resource path="res://ui/menus/global/my_menu_button.gd" type="Script" id=3]
[ext_resource path="res://resources/fonts/actual/base/font_26.tres" type="DynamicFont" id=4]
[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=5]
[ext_resource path="res://ui/menus/shop/inventory_container.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/menus/shop/item_popup.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/menus/shop/stat_popup.tscn" type="PackedScene" id=10]
[ext_resource path="res://ui/menus/global/popup_manager.tscn" type="PackedScene" id=11]
[ext_resource path="res://ui/hud/ui_gold.tscn" type="PackedScene" id=12]

[node name="ap_load_saved_run" type="Control"]
theme = ExtResource( 5 )
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="PopupManager" parent="." instance=ExtResource( 11 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 455.0
margin_bottom = 762.0
custom_constants/margin_right = 25
custom_constants/margin_top = 75
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 25.0
margin_top = 75.0
margin_right = 480.0
margin_bottom = 837.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 455.0
margin_bottom = 45.0
text = "Found Saved AP Run"
align = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 455.0
margin_bottom = 693.0
size_flags_horizontal = 5
size_flags_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 450.0
margin_bottom = 639.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 116.0
margin_bottom = 634.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer"]
margin_right = 116.0
margin_bottom = 634.0

[node name="GoldContainer" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource( 12 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 116.0
margin_bottom = 64.0
alignment = 0

[node name="WeaponsContainer" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource( 7 )]
unique_name_in_owner = true
margin_top = 68.0
margin_bottom = 349.0

[node name="ItemsContainer" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource( 7 )]
unique_name_in_owner = true
margin_top = 353.0
margin_bottom = 634.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 697.0
margin_right = 455.0
margin_bottom = 762.0
custom_constants/separation = 25
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 207.0
margin_bottom = 65.0
text = "Load run"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 232.0
margin_right = 455.0
margin_bottom = 65.0
text = "NEW_RUN"

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.862745 )
margin_left = 32.0
margin_top = 32.0
margin_right = 217.0
margin_bottom = 83.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "MENU_BACK"
script = ExtResource( 3 )

[node name="ItemPopup" parent="." instance=ExtResource( 9 )]
visible = false
margin_left = 50.0
margin_top = 50.0
margin_right = 50.0
margin_bottom = 50.0

[node name="StatPopup" parent="." instance=ExtResource( 10 )]
visible = false
margin_left = 50.0
margin_top = 50.0
margin_right = 50.0
margin_bottom = 50.0
